--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ZH-CN">
+
 <head>
     <title>注册界面</title>
     <meta charset="utf-8">
 </head>
+
 <body class="no-navbar">
     <div id="page_begin_html">
         <div id="foreground" class="wall"></div>
@@ -26,174 +28,210 @@
                     <form method="post" action="{{ url_for('signup') }}" class="form" id="form2">
                         <h2 class="form__title">欢迎注册</h2>
                         <input type="text" placeholder="User" class="input" id="username" name="username" required />
-                        <input type="password" placeholder="Password" class="input" id="password" name="password" required />
-                        <a href="{{ url_for('login') }}" target="_blank" style="text-decoration:none;color:gray;">已有账号</a>
-                        <input type="submit" class="sub" value="注册">
+                        <input type="password" placeholder="Password" class="input" id="password" name="password"
+                            required />
+                        <a href="{{ url_for('login') }}" target="_blank"
+                            style="text-decoration:none;color:#003399;">已有账号</a>
+                        <input type="submit" class="sub" value="注册" id="submitBtn">
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script>
+    let username = document.getElementById("username").value;
+    function validateForm() {
+        let username = document.getElementById("username").value;
+        // 用户名格式校验
+        if (!/^[a-zA-Z0-9_]{3,12}$/.test(username)) {
+            alert("用户名格式不正确,应为6-12位字母数字下划线组合");
+            return false;
+        }
+        // 密码格式校验
+        let password = document.getElementById("password").value;
+        if (!/^[a-zA-Z0-9]{6,16}$/.test(password)) {
+            alert("密码格式不正确,应为6-16位字母数字组合");
+            return false;
+        }
+        // 格式都正确则返回true
+        return true;
+    }
+    let Ousername = document.getElementById("username")
+    window.onload = function () {
+        let submitBtn = document.getElementById("submitBtn");
+        submitBtn.onclick = function () {
+            if (!validateForm()) {
+                return false;
+            } else {
+                alert(`欢迎您，用户:${Ousername.value}!`)
+            }
+        }
+
+    }
+
+</script>
+
 </html>
 
 <style>
-        :root {
-            /* 颜色 */
-            --white: #e9e9e9;
-            --gray: #333;
-            --blue: #0367a6;
-            --lightblue: #008997;
+    :root {
+        /* 颜色 */
+        --white: #e9e9e9;
+        --gray: #333;
+        --blue: #0367a6;
+        --lightblue: #008997;
 
-            /* 外边框圆角属性 */
-            --button-radius: 0.7rem;
+        /* 外边框圆角属性 */
+        --button-radius: 0.7rem;
 
-            /* 最大宽、高 的值*/
-            --max-width: 379px;
-            --max-height: 420px;
+        /* 最大宽、高 的值*/
+        --max-width: 379px;
+        --max-height: 420px;
 
-            /*  字体样式  */
-            font-size: 16px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-                Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        }
-
-        .no-navbar {
-        background-color:rgb(129,216,208,0.5);
+        /*  字体样式  */
+        font-size: 16px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     }
 
-        .wall {
-            position: fixed;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
+    .no-navbar {
+        background-color: rgb(129, 216, 208, 0.5);
+    }
+
+    .wall {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+
+    .main_card {
+        height: 100vh;
+        width: 70%;
+        border-bottom: 2px solid #ccc;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 2em;
+        position: absolute;
+        left: 15%;
+        top: 5%;
+    }
+
+    .info_card {
+        padding: 15px;
+
+    }
+
+    /* 标题 */
+    .form__title {
+        /* 字体粗细 */
+        padding-top: 45px;
+        font-family: Arial, sans-serif;
+        font-weight: bold;
+        margin: 0;
+        margin-bottom: 1.25rem;
+    }
+
+    /* 主体DIV样式 */
+    .container {
+        /* background-color: rgba(0,0,0.1); */
+        border-radius: var(--button-radius);
+
+        /* 添加阴影效果 */
+        box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
+            0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
+
+        height: var(--max-height);
+        max-width: var(--max-width);
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        left: 30%;
+        transform: translateY(20%);
+
+    }
+
+    /*注册框部分 */
+    .container__form {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        transition: all 0.6s ease-in-out;
+    }
+
+    .container--signin {
+        left: 0;
+        width: 100%;
+
+    }
+
+    /* 按钮设置*/
+    .sub {
+        float: left;
+        background-color: rgba(135, 206, 235, 0.8);
+        background-image: linear-gradient(45deg, var(--blue) 0%, rgba(135, 206, 235, 0.8) 64%);
+        border-radius: 20px;
+        border: 1px solid var(--blue);
+        color: var(--white);
+        cursor: pointer;
+        font-size: 0.8rem;
+        font-weight: bold;
+        letter-spacing: 0.1rem;
+        padding: 0.9rem 2rem;
+        text-transform: uppercase;
+        transition: transform 80ms ease-in;
+        margin: auto;
+    }
+
+    .form>.btn {
+        margin-top: 1.5rem;
+    }
+
+    .btn:active {
+        transform: scale(0.95);
+    }
+
+    .btn:focus {
+        outline: none;
+    }
+
+    /* 表单样式 */
+    .form {
+        background-color: rgba(176, 196, 222, 0.7);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0 3rem;
+        height: 100%;
+        text-align: center;
+    }
+
+    .input {
+        background-color: #fff;
+        border: none;
+        padding: 0.9rem 0.9rem;
+        margin: 0.5rem 0;
+        width: 100%;
+    }
+
+    @keyframes show {
+
+        0%,
+        49.99% {
+            opacity: 0;
+            z-index: 1;
         }
 
-        .main_card {
-            height: 100vh;
-            width: 70%;
-            border-bottom: 2px solid #ccc;
-            background-color: rgba(0, 0, 0, 0.1);
-            border-radius: 2em;
-            position: absolute;
-            left: 15%;
-            top: 5%;
+        50%,
+        100% {
+            opacity: 1;
+            z-index: 5;
         }
+    }
 
-        .info_card {
-            padding: 15px;
-
-        }
-
-        /* 标题 */
-        .form__title {
-            /* 字体粗细 */
-            padding-top: 45px;
-            font-family: Arial, sans-serif;
-            font-weight: bold;
-            margin: 0;
-            margin-bottom: 1.25rem;
-        }
-
-        /* 主体DIV样式 */
-        .container {
-            /* background-color: rgba(0,0,0.1); */
-            border-radius: var(--button-radius);
-
-            /* 添加阴影效果 */
-            box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
-                0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-
-            height: var(--max-height);
-            max-width: var(--max-width);
-            overflow: hidden;
-            position: relative;
-            width: 100%;
-            left: 30%;
-            transform: translateY(20%);
-
-        }
-
-        /*注册框部分 */
-        .container__form {
-            height: 100%;
-            position: absolute;
-            top: 0;
-            transition: all 0.6s ease-in-out;
-        }
-
-        .container--signin {
-            left: 0;
-            width: 100%;
-
-        }
-
-        /* 按钮设置*/
-        .sub {
-            float: left;
-            background-color: rgba(135, 206, 235, 0.8);
-            background-image: linear-gradient(45deg, var(--blue) 0%, rgba(135, 206, 235, 0.8) 64%);
-            border-radius: 20px;
-            border: 1px solid var(--blue);
-            color: var(--white);
-            cursor: pointer;
-            font-size: 0.8rem;
-            font-weight: bold;
-            letter-spacing: 0.1rem;
-            padding: 0.9rem 2rem;
-            text-transform: uppercase;
-            transition: transform 80ms ease-in;
-            margin: auto;
-        }
-
-        .form>.btn {
-            margin-top: 1.5rem;
-        }
-
-        .btn:active {
-            transform: scale(0.95);
-        }
-
-        .btn:focus {
-            outline: none;
-        }
-
-        /* 表单样式 */
-        .form {
-            background-color: rgba(176, 196, 222, 0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 0 3rem;
-            height: 100%;
-            text-align: center;
-        }
-
-        .input {
-            background-color: #fff;
-            border: none;
-            padding: 0.9rem 0.9rem;
-            margin: 0.5rem 0;
-            width: 100%;
-        }
-
-        @keyframes show {
-
-            0%,
-            49.99% {
-                opacity: 0;
-                z-index: 1;
-            }
-
-            50%,
-            100% {
-                opacity: 1;
-                z-index: 5;
-            }
-        }
-        li {
-            list-style: none;
-        }
-    </style>
+    li {
+        list-style: none;
+    }
+</style>
